// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Radio Widget multi-choice question should snapshot the same when invalid: invalid state 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <strong>
          Select all input values for which 
          <span
            style="white-space: nowrap;"
          >
            <span />
            <span
              class="mock-TeX"
            >
              g(x)=2
            </span>
            <span />
          </span>
          .
        </strong>
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <fieldset
            class="container"
          >
            <legend
              aria-hidden="true"
              class="instructions"
              id=":r82:"
            >
              Choose all answers that apply:
            </legend>
            <div
              id=":r83:-scroll"
              role="group"
              style="overflow-x: auto;"
            >
              <ul
                aria-labelledby=":r82:"
                class="choice-list"
                data-widget="radio"
                role="list"
              >
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice A)"
                    aria-labelledby=":r86: :r85:-choice-1"
                    aria-pressed="true"
                    class="base square-shape"
                    id=":r86:"
                    type="button"
                  >
                    <span>
                      A
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r85:-choice-1"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph perseus-paragraph-centered"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="perseus-block-math"
                          >
                            <div
                              class="perseus-block-math-inner"
                              style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
                            >
                              <span
                                class="mock-TeX"
                              >
                                x=-6
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice B)"
                    aria-labelledby=":r87: :r85:-choice-2"
                    aria-pressed="false"
                    class="base square-shape"
                    id=":r87:"
                    type="button"
                  >
                    <span>
                      B
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r85:-choice-2"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph perseus-paragraph-centered"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="perseus-block-math"
                          >
                            <div
                              class="perseus-block-math-inner"
                              style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
                            >
                              <span
                                class="mock-TeX"
                              >
                                x=4
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice C)"
                    aria-labelledby=":r88: :r85:-choice-3"
                    aria-pressed="false"
                    class="base square-shape"
                    id=":r88:"
                    type="button"
                  >
                    <span>
                      C
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r85:-choice-3"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph perseus-paragraph-centered"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="perseus-block-math"
                          >
                            <div
                              class="perseus-block-math-inner"
                              style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
                            >
                              <span
                                class="mock-TeX"
                              >
                                x=7
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice D)"
                    aria-labelledby=":r89: :r85:-choice-4"
                    aria-pressed="false"
                    class="base square-shape"
                    id=":r89:"
                    type="button"
                  >
                    <span>
                      D
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r85:-choice-4"
                    >
                      None of the above
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      class="paragraph perseus-paragraph-centered"
      data-perseus-paragraph-index="2"
    >
      <div
        class="paragraph"
      >
         
        <div
          class="unresponsive-svg-image"
        >
          <span
            style="top: 0px; left: 0px; width: 100%; height: 100%; position: absolute; min-width: 20px; display: flex; justify-content: center; align-content: center;"
          >
            <div
              class="default_xu2jcg-o_O-spinnerContainer_agrn11"
            >
              <svg
                height="48"
                viewBox="0 0 48 48"
                width="48"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="loadingSpinner_1dvgeb3-o_O-inlineStyles_8njutv"
                  d="M44.19 23.455a1.91 1.91 0 1 1 3.801 0h.003c.004.18.006.363.006.545 0 13.255-10.745 24-24 24S0 37.255 0 24 10.745 0 24 0c.182 0 .364.002.545.006V.01a1.91 1.91 0 1 1 0 3.801v.015A20.564 20.564 0 0 0 24 3.818C12.854 3.818 3.818 12.854 3.818 24c0 11.146 9.036 20.182 20.182 20.182 11.146 0 20.182-9.036 20.182-20.182 0-.182-.003-.364-.007-.545h.015z"
                  fill-rule="nonzero"
                />
              </svg>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio Widget single-choice question reviewMode: false should snapshot the same with correct answer: correct answer 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        Which of the following values of 
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            x
          </span>
          <span />
        </span>
         satisfies the equation 
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            \\sqrt{64}=x
          </span>
          <span />
        </span>
         ?
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <fieldset
            class="container"
          >
            <legend
              aria-hidden="true"
              class="instructions"
              id=":r28:"
            >
              Choose 1 answer:
            </legend>
            <div
              id=":r29:-scroll"
              role="group"
              style="overflow-x: auto;"
            >
              <ul
                aria-labelledby=":r28:"
                class="choice-list"
                data-widget="radio"
                role="list"
              >
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice A)"
                    aria-labelledby=":r2c: :r2b:-choice-1"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":r2c:"
                    type="button"
                  >
                    <span>
                      A
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r2b:-choice-1"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                -8
                              </span>
                              <span />
                            </span>
                             and 
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                8
                              </span>
                              <span />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice B)"
                    aria-labelledby=":r2d: :r2b:-choice-2"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":r2d:"
                    type="button"
                  >
                    <span>
                      B
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r2b:-choice-2"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph perseus-paragraph-centered"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="perseus-block-math"
                          >
                            <div
                              class="perseus-block-math-inner"
                              style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
                            >
                              <span
                                class="mock-TeX"
                              >
                                -8
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice C)"
                    aria-labelledby=":r2e: :r2b:-choice-3"
                    aria-pressed="true"
                    class="base circle-shape"
                    id=":r2e:"
                    type="button"
                  >
                    <span>
                      C
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r2b:-choice-3"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph perseus-paragraph-centered"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="perseus-block-math"
                          >
                            <div
                              class="perseus-block-math-inner"
                              style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
                            >
                              <span
                                class="mock-TeX"
                              >
                                8
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice D)"
                    aria-labelledby=":r2f: :r2b:-choice-4"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":r2f:"
                    type="button"
                  >
                    <span>
                      D
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r2b:-choice-4"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            No value of 
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                x
                              </span>
                              <span />
                            </span>
                             satisfies the equation.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio Widget single-choice question reviewMode: false should snapshot the same with incorrect answer: incorrect answer 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        Which of the following values of 
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            x
          </span>
          <span />
        </span>
         satisfies the equation 
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            \\sqrt{64}=x
          </span>
          <span />
        </span>
         ?
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <fieldset
            class="container"
          >
            <legend
              aria-hidden="true"
              class="instructions"
              id=":r2g:"
            >
              Choose 1 answer:
            </legend>
            <div
              id=":r2h:-scroll"
              role="group"
              style="overflow-x: auto;"
            >
              <ul
                aria-labelledby=":r2g:"
                class="choice-list"
                data-widget="radio"
                role="list"
              >
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice A)"
                    aria-labelledby=":r2k: :r2j:-choice-1"
                    aria-pressed="true"
                    class="base circle-shape"
                    id=":r2k:"
                    type="button"
                  >
                    <span>
                      A
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r2j:-choice-1"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                -8
                              </span>
                              <span />
                            </span>
                             and 
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                8
                              </span>
                              <span />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice B)"
                    aria-labelledby=":r2l: :r2j:-choice-2"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":r2l:"
                    type="button"
                  >
                    <span>
                      B
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r2j:-choice-2"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph perseus-paragraph-centered"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="perseus-block-math"
                          >
                            <div
                              class="perseus-block-math-inner"
                              style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
                            >
                              <span
                                class="mock-TeX"
                              >
                                -8
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice C)"
                    aria-labelledby=":r2m: :r2j:-choice-3"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":r2m:"
                    type="button"
                  >
                    <span>
                      C
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r2j:-choice-3"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph perseus-paragraph-centered"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="perseus-block-math"
                          >
                            <div
                              class="perseus-block-math-inner"
                              style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
                            >
                              <span
                                class="mock-TeX"
                              >
                                8
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice D)"
                    aria-labelledby=":r2n: :r2j:-choice-4"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":r2n:"
                    type="button"
                  >
                    <span>
                      D
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r2j:-choice-4"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            No value of 
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                x
                              </span>
                              <span />
                            </span>
                             satisfies the equation.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio Widget single-choice question reviewMode: false should snapshot the same: first render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        Which of the following values of 
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            x
          </span>
          <span />
        </span>
         satisfies the equation 
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            \\sqrt{64}=x
          </span>
          <span />
        </span>
         ?
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <fieldset
            class="container"
          >
            <legend
              aria-hidden="true"
              class="instructions"
              id=":r20:"
            >
              Choose 1 answer:
            </legend>
            <div
              id=":r21:-scroll"
              role="group"
              style="overflow-x: auto;"
            >
              <ul
                aria-labelledby=":r20:"
                class="choice-list"
                data-widget="radio"
                role="list"
              >
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice A)"
                    aria-labelledby=":r24: :r23:-choice-1"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":r24:"
                    type="button"
                  >
                    <span>
                      A
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r23:-choice-1"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                -8
                              </span>
                              <span />
                            </span>
                             and 
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                8
                              </span>
                              <span />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice B)"
                    aria-labelledby=":r25: :r23:-choice-2"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":r25:"
                    type="button"
                  >
                    <span>
                      B
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r23:-choice-2"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph perseus-paragraph-centered"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="perseus-block-math"
                          >
                            <div
                              class="perseus-block-math-inner"
                              style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
                            >
                              <span
                                class="mock-TeX"
                              >
                                -8
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice C)"
                    aria-labelledby=":r26: :r23:-choice-3"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":r26:"
                    type="button"
                  >
                    <span>
                      C
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r23:-choice-3"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph perseus-paragraph-centered"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="perseus-block-math"
                          >
                            <div
                              class="perseus-block-math-inner"
                              style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
                            >
                              <span
                                class="mock-TeX"
                              >
                                8
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice D)"
                    aria-labelledby=":r27: :r23:-choice-4"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":r27:"
                    type="button"
                  >
                    <span>
                      D
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r23:-choice-4"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            No value of 
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                x
                              </span>
                              <span />
                            </span>
                             satisfies the equation.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio Widget single-choice question reviewMode: true should snapshot the same with correct answer: correct answer 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        Which of the following values of 
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            x
          </span>
          <span />
        </span>
         satisfies the equation 
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            \\sqrt{64}=x
          </span>
          <span />
        </span>
         ?
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <fieldset
            class="container"
          >
            <legend
              aria-hidden="true"
              class="instructions"
              id=":r8:"
            >
              Choose 1 answer:
            </legend>
            <div
              id=":r9:-scroll"
              role="group"
              style="overflow-x: auto;"
            >
              <ul
                aria-labelledby=":r8:"
                class="choice-list"
                data-widget="radio"
                role="list"
              >
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice A)"
                    aria-labelledby=":rc: :rb:-choice-1"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":rc:"
                    type="button"
                  >
                    <span>
                      A
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":rb:-choice-1"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                -8
                              </span>
                              <span />
                            </span>
                             and 
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                8
                              </span>
                              <span />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice B)"
                    aria-labelledby=":rd: :rb:-choice-2"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":rd:"
                    type="button"
                  >
                    <span>
                      B
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":rb:-choice-2"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph perseus-paragraph-centered"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="perseus-block-math"
                          >
                            <div
                              class="perseus-block-math-inner"
                              style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
                            >
                              <span
                                class="mock-TeX"
                              >
                                -8
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice C)"
                    aria-labelledby=":re: :rb:-choice-3"
                    aria-pressed="true"
                    class="base circle-shape"
                    id=":re:"
                    type="button"
                  >
                    <span>
                      C
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":rb:-choice-3"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph perseus-paragraph-centered"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="perseus-block-math"
                          >
                            <div
                              class="perseus-block-math-inner"
                              style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
                            >
                              <span
                                class="mock-TeX"
                              >
                                8
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice D)"
                    aria-labelledby=":rf: :rb:-choice-4"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":rf:"
                    type="button"
                  >
                    <span>
                      D
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":rb:-choice-4"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            No value of 
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                x
                              </span>
                              <span />
                            </span>
                             satisfies the equation.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio Widget single-choice question reviewMode: true should snapshot the same with incorrect answer: incorrect answer 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        Which of the following values of 
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            x
          </span>
          <span />
        </span>
         satisfies the equation 
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            \\sqrt{64}=x
          </span>
          <span />
        </span>
         ?
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <fieldset
            class="container"
          >
            <legend
              aria-hidden="true"
              class="instructions"
              id=":rg:"
            >
              Choose 1 answer:
            </legend>
            <div
              id=":rh:-scroll"
              role="group"
              style="overflow-x: auto;"
            >
              <ul
                aria-labelledby=":rg:"
                class="choice-list"
                data-widget="radio"
                role="list"
              >
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice A)"
                    aria-labelledby=":rk: :rj:-choice-1"
                    aria-pressed="true"
                    class="base circle-shape"
                    id=":rk:"
                    type="button"
                  >
                    <span>
                      A
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":rj:-choice-1"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                -8
                              </span>
                              <span />
                            </span>
                             and 
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                8
                              </span>
                              <span />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice B)"
                    aria-labelledby=":rl: :rj:-choice-2"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":rl:"
                    type="button"
                  >
                    <span>
                      B
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":rj:-choice-2"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph perseus-paragraph-centered"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="perseus-block-math"
                          >
                            <div
                              class="perseus-block-math-inner"
                              style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
                            >
                              <span
                                class="mock-TeX"
                              >
                                -8
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice C)"
                    aria-labelledby=":rm: :rj:-choice-3"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":rm:"
                    type="button"
                  >
                    <span>
                      C
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":rj:-choice-3"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph perseus-paragraph-centered"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="perseus-block-math"
                          >
                            <div
                              class="perseus-block-math-inner"
                              style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
                            >
                              <span
                                class="mock-TeX"
                              >
                                8
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice"
                  role="listitem"
                >
                  <button
                    aria-disabled="false"
                    aria-label="(Choice D)"
                    aria-labelledby=":rn: :rj:-choice-4"
                    aria-pressed="false"
                    class="base circle-shape"
                    id=":rn:"
                    type="button"
                  >
                    <span>
                      D
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":rj:-choice-4"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            No value of 
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                x
                              </span>
                              <span />
                            </span>
                             satisfies the equation.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Radio Widget single-choice question reviewMode: true should snapshot the same: first render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        Which of the following values of 
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            x
          </span>
          <span />
        </span>
         satisfies the equation 
        <span
          style="white-space: nowrap;"
        >
          <span />
          <span
            class="mock-TeX"
          >
            \\sqrt{64}=x
          </span>
          <span />
        </span>
         ?
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <fieldset
            class="container"
          >
            <legend
              aria-hidden="true"
              class="instructions"
              id=":r0:"
            >
              Choose 1 answer:
            </legend>
            <div
              id=":r1:-scroll"
              role="group"
              style="overflow-x: auto;"
            >
              <ul
                aria-labelledby=":r0:"
                class="choice-list review-answers"
                data-widget="radio"
                role="list"
              >
                <li
                  class="choice is-wrong"
                  role="listitem"
                >
                  <button
                    aria-describedby=":r3:-choice-1-rationale"
                    aria-disabled="true"
                    aria-label="(Choice A)"
                    aria-labelledby=":r4: :r3:-choice-1"
                    aria-pressed="false"
                    class="base circle-shape is-wrong"
                    id=":r4:"
                    type="button"
                  >
                    <span>
                      A
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r3:-choice-1"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                -8
                              </span>
                              <span />
                            </span>
                             and 
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                8
                              </span>
                              <span />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="rationale"
                      id=":r3:-choice-1-rationale"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            The square root operation (
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                \\sqrt{\\phantom{x}}
                              </span>
                              <span />
                            </span>
                            ) calculates 
                            <em>
                              only
                            </em>
                             the positive square root when performed on a number, so 
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                x
                              </span>
                              <span />
                            </span>
                             is equal to 
                            <em>
                              only
                            </em>
                             
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                8
                              </span>
                              <span />
                            </span>
                            .
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice is-wrong"
                  role="listitem"
                >
                  <button
                    aria-describedby=":r3:-choice-2-rationale"
                    aria-disabled="true"
                    aria-label="(Choice B)"
                    aria-labelledby=":r5: :r3:-choice-2"
                    aria-pressed="false"
                    class="base circle-shape is-wrong"
                    id=":r5:"
                    type="button"
                  >
                    <span>
                      B
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r3:-choice-2"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph perseus-paragraph-centered"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="perseus-block-math"
                          >
                            <div
                              class="perseus-block-math-inner"
                              style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
                            >
                              <span
                                class="mock-TeX"
                              >
                                -8
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="rationale"
                      id=":r3:-choice-2-rationale"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            While 
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                (-8)^2=64
                              </span>
                              <span />
                            </span>
                            , the square root operation (
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                \\sqrt{\\phantom{x}}
                              </span>
                              <span />
                            </span>
                            ) calculates 
                            <em>
                              only
                            </em>
                             the positive square root when performed on a number.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice is-correct"
                  role="listitem"
                >
                  <button
                    aria-describedby=":r3:-choice-3-rationale"
                    aria-disabled="true"
                    aria-label="(Choice C, Correct)"
                    aria-labelledby=":r6: :r3:-choice-3"
                    aria-pressed="true"
                    class="base circle-shape is-correct"
                    id=":r6:"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="svg_1q6jc65-o_O-small_6q1hy-o_O-inlineStyles_uxmzw3 icon"
                    />
                    <span>
                      C
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r3:-choice-3"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph perseus-paragraph-centered"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="perseus-block-math"
                          >
                            <div
                              class="perseus-block-math-inner"
                              style="overflow-x: auto; overflow-y: hidden; padding-top: 10px; padding-bottom: 10px; margin-top: -10px; margin-bottom: -10px;"
                            >
                              <span
                                class="mock-TeX"
                              >
                                8
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="rationale is-correct"
                      id=":r3:-choice-3-rationale"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                8
                              </span>
                              <span />
                            </span>
                             is the positive square root of 
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                64
                              </span>
                              <span />
                            </span>
                            .
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  class="choice is-wrong"
                  role="listitem"
                >
                  <button
                    aria-describedby=":r3:-choice-4-rationale"
                    aria-disabled="true"
                    aria-label="(Choice D)"
                    aria-labelledby=":r7: :r3:-choice-4"
                    aria-pressed="false"
                    class="base circle-shape is-wrong"
                    id=":r7:"
                    type="button"
                  >
                    <span>
                      D
                    </span>
                  </button>
                  <div
                    class="content"
                  >
                    <div
                      id=":r3:-choice-4"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            No value of 
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                x
                              </span>
                              <span />
                            </span>
                             satisfies the equation.
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="rationale"
                      id=":r3:-choice-4-rationale"
                    >
                      <div
                        class="perseus-renderer perseus-renderer-responsive"
                      >
                        <div
                          class="paragraph"
                          data-perseus-paragraph-index="0"
                        >
                          <div
                            class="paragraph"
                          >
                            <span
                              style="white-space: nowrap;"
                            >
                              <span />
                              <span
                                class="mock-TeX"
                              >
                                8
                              </span>
                              <span />
                            </span>
                             satisfies the equation.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</div>
`;
